Fix overflow

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -29,7 +29,7 @@ $danger: #192a4d;
 body {
   color: white;
   background-color: #0a111f;
-  min-height: 100vh;
+  min-height: 98vh;
   position: relative;
 }
 
